<resources>
    <string name="app_name">Kotlin Sample</string>

    <!-- 相机 -->
    <string name="camera_access_required">相机预览需要开启相机访问。</string>
    <string name="ok">好的</string>
    <string name="camera_permission_not_available">相机权限不可用，请求相机权限。</string>
    <string name="camera_permission_available">相机权限可用，开启预览。</string>
    <string name="camera_permission_granted">相机权限被授予。启动预览。</string>
    <string name="camera_permission_denied">相机权限请求被拒绝。</string>
    <string name="camera_unavailable">相机不可用。</string>

    <!-- 存储 -->
    <string name="write_external_storage_permission_granted">写入外部存储权限被授予</string>
    <string name="write_external_storage_permission_available">写入外部存储权限可用</string>
    <string name="write_external_storage_access_required">需要开启写入外部存储权限</string>
    <string name="write_external_storage_permission_not_available">写入外部存储权限不可用，请求权限</string>
    <string name="write_external_storage_permission_denied">写入外部存储权限请求被拒绝。</string>
    <string name="read_external_storage_access_required">外部存储权限需要开启</string>
    <string name="read_external_storage_permission_not_available">读取外部存储权限不可用，请求权限</string>
    <string name="read_external_storage_permission_granted">读取外部存储权限被授予</string>
    <string name="read_external_storage_permission_denied">读取外部存储权限请求被拒绝。</string>

    <!-- 权限 -->
    <string name="permission_intro">这是权限相关示例。\n可以有两种方式来申请权限，一种是继承ActivityCompat.OnRequestPermissionsResultCallback接口，一种是通过Launcher。
    最优策略是在当前操作用到权限时再去申请，如需申请多个权限，可以分步进行。</string>
    <string name="permission_implement_intro">这里是通过继承ActivityCompat.OnRequestPermissionsResultCallback接口来请求权限</string>
    <string name="permision_implement_button_start_camera">开启相机预览</string>
    <string name="permission_button_implement_show">继承接口申请权限示例</string>
    <string name="permission_button_launcher_show">Launcher申请权限示例</string>
    <string name="permission_button_multiple_show">申请多个权限示例</string>
    <string name="permission_launcher_intro">这是通过launcher申请权限的示例</string>
    <string name="permission_launcher_button_start_camera">开启相机预览</string>
    <string name="permission_multiple_intro">这是一个一次申请多个权限的示例，采用分步方式实现。</string>
    <string name="permission_multiple_button_start_camera">开启相机预览</string>

    <!-- MainActivity -->
    <string name="main_intro">示例主题列表</string>
    <string name="main_button_dialog">对话框</string>
    <string name="main_button_permission">权限</string>
    <string name="main_button_camera">相机</string>
    <string name="main_button_layout">布局</string>
    <string name="main_button_view">控件</string>
    <string name="main_button_file">文件</string>

    <!-- FileActivity -->
    <string name="file_intro">这是用户数据和文件相关的示例。存储空间分为内部存储空间和外部存储空间，每一个空间又包含两个目录，一个是持久性文件目录，一个是缓存目录。</string>
    <string name="file_button_files_dir">内部空间</string>
    <string name="file_button_external_files_dir">外部空间</string>
    <string name="file_button_media">媒体</string>
    <string name="filesdir_infro">这是内部空间的示例</string>
    <string name="filesdir_button_showdir">显示内部空间目录路径</string>
    <string name="filesdir_button_write">写入一个文本文件</string>
    <string name="filesdir_button_read">读取文本文件</string>
    <string name="filesdir_button_list">查看文件列表</string>
    <string name="filesdir_button_create_dir">创建子目录</string>
    <string name="filesdir_button_create_tmp_file">创建临时文件</string>
    <string name="filesdir_button_delete_tmp_file">删除临时文件</string>
    <string name="externalfilesdir_intro">这是外部空间的示例</string>
    <string name="externalfilesdir_button_state">验证外部空间状态</string>
    <string name="externalfilesdir_showdir">显示外部空间目录路径</string>
    <string name="externalfilesdir_create">创建文本文件</string>
    <string name="externalfilesdir_read">读取文本文件</string>
    <string name="externalfilesdir_create_cache_file">创建临时文件</string>
    <string name="externalfilesdir_delete_cache_file">删除临时文件</string>
    <string name="mediastore_intro">
        这是媒体的示例，通过MediaStore API来获取图片媒体，选前三张显示到下面的3个ImageView上。 下面是实现增删改。\n
        没有请求READ_EXTERNAL_STORAGE权限时，只能访问本应用在媒体库的文件，请求完权限后，可以访问到全部的图片\n
        创建一张图片，在getExternalFilesDir()目录中，然后打开相机intent，将此图片Uri传过去，拍照成功后显示图片。
        媒体库添加一项，将此Uri传递给相机intent，拍照，显示此图片，查看是否添加到媒体库。
    </string>
    <string name="mediastore_button_show_images">显示3张缩略图</string>
    <string name="mediastore_button_show_images_origin">显示3张原图</string>
    <string name="mediastore_button_take_photo_show">拍照，显示原图</string>
    <string name="mediastore_button_take_photo_media">拍照，添加到媒体库</string>

</resources>