<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_media_store"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:context=".file.MediaStoreActivity">

        <ImageView
            android:id="@+id/iv_mediastore_show_origin3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_mediastore_show_origin2"
            app:layout_constraintTop_toBottomOf="@+id/btn_mediastore_show_origin"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_mediastore_show_origin2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_mediastore_show_origin3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_mediastore_show_origin1"
            app:layout_constraintTop_toTopOf="@+id/iv_mediastore_show_origin3"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/mediastore_intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_mediastore_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mediastore_button_show_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <ImageView
            android:id="@+id/iv_mediastore_show1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_mediastore_show2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_mediastore_show"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_mediastore_show2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_mediastore_show3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_mediastore_show1"
            app:layout_constraintTop_toTopOf="@+id/iv_mediastore_show1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_mediastore_show3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_mediastore_show2"
            app:layout_constraintTop_toTopOf="@+id/iv_mediastore_show2"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_mediastore_show_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mediastore_button_show_images_origin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_mediastore_show2" />

        <ImageView
            android:id="@+id/iv_mediastore_show_origin1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_mediastore_show_origin2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_mediastore_show_origin2"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_mediastore_take_photo_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mediastore_button_take_photo_show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_mediastore_show_origin2" />

        <ImageView
            android:id="@+id/iv_mediastore_show_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_mediastore_take_photo_show"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_mediastore_take_photo_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mediastore_button_take_photo_media"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_mediastore_show_photo" />

        <ImageView
            android:id="@+id/iv_mediastore_show_photo_media"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_mediastore_take_photo_media"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>